locale: exit 1 if unknown keyword was specified

PR:		241906
Submitted by:	Akos Somfai <akos.somfai@gmail.com>